--- a/report/report.bib
+++ b/report/report.bib
@@ -156,3 +156,27 @@ author = "Peter Breitenlohner and Daniel Z. Freedman"
    adsurl = {http://adsabs.harvard.edu/abs/2006AnP...518..606L},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@article{horowitz,
+      author         = "Horowitz, Gary T. and Santos, Jorge E.",
+      title          = "{General Relativity and the Cuprates}",
+      year           = "2013",
+      eprint         = "1302.6586",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      SLACcitation   = "%%CITATION = ARXIV:1302.6586;%%",
+}
+@article{hartnoll9,
+      author         = "Hartnoll, Sean A. and Herzog, Christopher P. and
+                        Horowitz, Gary T.",
+      title          = "{Building a Holographic Superconductor}",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "101",
+      pages          = "031601",
+      doi            = "10.1103/PhysRevLett.101.031601",
+      year           = "2008",
+      eprint         = "0803.3295",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      reportNumber   = "NSF-KITP-08-38, PUPT-2261",
+      SLACcitation   = "%%CITATION = ARXIV:0803.3295;%%",
+}
